<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            android:padding="32dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/footballmain"
                android:textColor="@color/colorWhite"
                android:textSize="28sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textColor="@color/colorWhite"
                android:text="@string/tv1" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/colorWhite"
                android:inputType="textPersonName"
                android:textColorHint="@color/colorHintText"
                android:hint="@string/hint1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textColor="@color/colorWhite"
                android:text="@string/tv2" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@color/colorWhite"
                android:inputType="textPersonName"
                android:textColorHint="@color/colorHintText"
                android:hint="@string/hint2" />

            <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="next"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:background="@color/colorTransparent"
            android:layout_marginTop="24dp"
            android:text="@string/start" />
            <Button

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="skip"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:background="@color/colorTransparent"
                android:layout_marginTop="24dp"
                android:text="@string/skip" />
        </LinearLayout>




</LinearLayout>